--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "eject": "react-scripts eject",
     "dev": "nodemon server/index.js --exec babel-node --ignore src",
     "server:build": "babel server -d dist",
-    "server": "node dist/index.js"
+    "server": "node dist/index.js",
+    "host": "concurrently --kill-others \"react-scripts start\" \"node dist/index.js\""
   },
   "eslintConfig": {
     "extends": [
@@ -54,6 +55,7 @@
     "@babel/node": "^7.20.7",
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
+    "concurrently": "^7.6.0",
     "ncp": "^2.0.0",
     "nodemon": "^2.0.20",
     "rimraf": "^4.1.2"
