--- a/package.json
+++ b/package.json
@@ -2,23 +2,33 @@
   "name": "imagenes-galery",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.3",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
     "bootswatch": "^5.2.3",
     "cloudinary": "^1.34.0",
+    "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.2",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "vercel": "^28.16.3",
     "web-vitals": "^2.1.4"
   },
@@ -30,7 +40,7 @@
     "dev": "nodemon server/index.js --exec babel-node --ignore src",
     "server:build": "babel server -d dist",
     "server": "node dist/index.js",
-    "host": "concurrently --kill-others \"react-scripts start\" \"node dist/index.js\""
+    "host": "concurrently --kill-others \"react-scripts start\" \"nodemon server/index.js --exec babel-node --ignore src\""
   },
   "eslintConfig": {
     "extends": [
